[package]
name = "iota-vanitygen"
version = "0.1.0"
authors = ["Thoralf-M <thoralf.mue@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bee-message = { version  = "0.1.5", default-features = false, features = ["serde"] }
iota-crypto = { version = "0.7.0", default-features = false, features = ["std", "blake2b", "ed25519", "random", "slip10", "bip39", "bip39-en"] }